ajout d'un paragraphe

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>
+        Ceci est un paragraphe très inspiré rédigé par Sophie ! \o/
+    </p>
 </body>
 </html>
